# mcp-practical

./: README.md  pyproject.toml
mcptutor/: assistant.py  mcpclient.py  mcpserver.py
mcptutor/content/: algebra.md  photosythesis.md
